fix: wrap button text on overflow

--- a/src/radio-buttons.css
+++ b/src/radio-buttons.css
@@ -1,15 +1,15 @@
 .eha-radio-buttons .btn {
   width: 48%;
   margin-right: 2%;
-  line-height: 1.5em;
   font-size: 1.5em;
-  text-align: center;
   border-radius: 10px;
   background-color: #95A5A6;
   border: 5px solid #778484;
   position: relative;
   transition: background 0.25s;
   color: #FFFFFF;
+  padding: 0.3em;
+  word-break: break-word;
 }
 
 .eha-radio-buttons .btn:focus {
@@ -36,5 +36,5 @@
 }
 
 .eha-radio-buttons .btn .fa:before {
-  margin: 0 10px 0 0;
+  margin: 0 0.3em 0 0;
 }
